<resources>
    <string name="app_name">MisContactos</string>
    <string name="nombre">Edgar Nectalyl</string>
    <string name="telefono">6664626</string>
    <string name="correo">nkta_mtz@hotmail.com</string>

    <string name="pnombre">Nombre</string>
    <string name="ptelefono">Telefono</string>
    <string name="pemail">Correo</string>
    <string name="pdescrip">Descripción</string>
    <string name="pDescripContacto">Docente de Conalep Navojoa Sonora</string>
    <string name="botonclick">Siguiente</string>
    <string name="error">Introduce el dato</string>
</resources>
