<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nkta_.miscontactos.MainActivity"
    android:background="@color/colorFondo"
    android:orientation="vertical"
    android:id="@+id/layout">

    <android.support.design.widget.TextInputLayout

        android:id="@+id/Textonombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pnombre"
        app:hintTextAppearance="@style/AppTheme.FloatingLabel">


        <android.support.design.widget.TextInputEditText
            android:id="@+id/Nombrepersona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:theme="@style/EditText" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/Texttelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ptelefono"
        app:hintTextAppearance="@style/AppTheme.FloatingLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Numtelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPhonetic"
            android:theme="@style/EditText"
            android:textAlignment="center"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Textcorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pemail"
        app:hintTextAppearance="@style/AppTheme.FloatingLabel"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/emailcorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:theme="@style/EditText"
            android:textAlignment="center"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Textdescrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pdescrip"
        app:hintTextAppearance="@style/AppTheme.FloatingLabel">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/datosdescrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:theme="@style/EditText"
            android:textAlignment="center"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnMiBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="verificar"
        android:text="@string/botonclick"
        android:theme="@style/BotonRaised" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    </DatePicker>







</LinearLayout>
