<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.nkta_.miscontactos.DetalleContacto">

    <TextView
        android:id="@+id/Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textStyle="bold"
        android:textSize="@dimen/NombreContacto"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/Top"
        android:onClick="llamar"
        >

        <ImageView
            android:id="@+id/imgtelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cell_phone"
            />

    <TextView
        android:id="@+id/Telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefono"
        android:layout_gravity="center_vertical"
        android:textSize="@dimen/Telcontacto"
        android:layout_marginLeft="@dimen/Left"
        />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/Top"
        android:onClick="enviarMail"
        >

        <ImageView
            android:id="@+id/imgCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/message_26"
            />
    <TextView
        android:id="@+id/Correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:layout_gravity="center_vertical"
        android:textSize="@dimen/Telcontacto"
        android:layout_marginLeft="@dimen/Left"

        />
    </LinearLayout>

</LinearLayout>
